--- a/src/component/pages/dashboard/Main.css
+++ b/src/component/pages/dashboard/Main.css
@@ -119,6 +119,8 @@
 .banner-container {
   position: relative;
   width: 100%;
+  display: flex;
+  justify-content: center;
   height: 200px;
   border-radius: 12px;
   overflow: hidden;
@@ -133,9 +135,8 @@
 }
 
 .banner-image {
-  width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: scale-down;
 }
 
 .banner-placeholder {
@@ -263,6 +264,7 @@
 /* Form Groups */
 .form-group {
   display: flex;
+  width: 100%;
   flex-direction: column;
   gap: 0.5rem;
 }
@@ -572,11 +574,7 @@
   border-color: #4f46e5;
 }
 
-.banner-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+
 .themeUpload{
 text-align: center;
   border: 1px solid black;
